# simple-console-engine

./: .gitignore  CMakeLists.txt
include/: audio.h  bitmap.h  console.h  types.h
src/: audio.c  bitmap.c  console.c  console.h  library.c  library.h  main.c  sprite.c  sprite.h
